# new_admin_panel_sprint_1

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: application_definition.py  database.py  static_files.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_alter_filmwork_type.py  0002_filmwork_file_path.py  0003_filmwork_film_work_creation_date_idx_and_more.py  0004_genrefilmwork_uk_genre_film_and_more.py  0005_alter_filmwork_options_alter_genre_options_and_more.py
schema_design/: movies_database.ddl
sqlite_to_postgres/: load_data.py  postgres_saver.py  schemas.py  sqlite_loader.py  utills.py
sqlite_to_postgres/tests/: check_consistency.py
