[project]
name = "new-admin-panel-sprint-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.11",
    "django-debug-toolbar>=6.0.0",
    "django-split-settings>=1.3.2",
    "flake8==6.1.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
